YH-1904: Fixed: Incorrect font size and spacing between blocks in the “Mentoring - Education” section

--- a/src/shared/ui/AccordionMentor/AccordionMentor.module.css
+++ b/src/shared/ui/AccordionMentor/AccordionMentor.module.css
@@ -119,7 +119,7 @@
 }
 
 .move-title.accordion[open] .title {
-	opacity: 0;
+	display: none;
 	pointer-events: none;
 }
 
@@ -133,6 +133,7 @@
 @media (width < 768px) {
 	.accordion {
 		padding: 10px;
+		
 	}
 
 	.media {
